# pjsekai-scores-rs

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  pjsekai_scores_rs.pyi  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/scripts/: configure-python-package.sh  install-skia-linux-deps.sh
.github/workflows/: ci.yml  release-cli.yml  release-crate.yml  release-python.yml  release.yml
src/: drawing.rs  fraction.rs  lib.rs  line.rs  lyric.rs  main.rs  meta.rs  notes.rs  python.rs  rebase.rs  score.rs  score_json.rs  skia_direct.rs  wasm.rs
src/notes/: directional.rs  event.rs  slide.rs  tap.rs
