[package]
name = "pjsekai-scores-rs"
version = "0.4.3"
edition = "2024"
description = "Project SEKAI score (.sus) parser, SVG chart renderer, and Skia image renderer"
license = "MIT"

[features]
default = []
python = ["dep:pyo3"]
skia-image = ["dep:skia-safe"]
wasm = ["dep:wasm-bindgen"]

[dependencies]
num = "0.4"
regex = "1"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
pyo3 = { version = "0.28", features = ["extension-module", "generate-import-lib"], optional = true }
skia-safe = { version = "0.97.2", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[lints.rust]
# Free-threaded Python requires all #[pyclass] types to be Send + Sync.
# Our types satisfy this since they contain only owned Rust data with no Rc/RefCell.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(Py_GIL_DISABLED)'] }

[lib]
name = "pjsekai_scores_rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "pjsekai-scores-rs"
path = "src/main.rs"
