[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pjsekai-scores-rs"
version = "0.1.0"
description = "Project SEKAI score (.sus) parser and SVG chart renderer (Rust implementation)"
requires-python = ">=3.9"

[tool.maturin]
features = ["python"]
module-name = "pjsekai_scores"
